--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     
 <h1>Bożena Zwatrzko portfolio</h1>
-<h2>Im a web designer bitch</h2>
+<h2>Im a web designer ye</h2>
 <hr />
 <h3>
 <a href="public/movie-ranking.html">Movie ranking</a>
